<resources>
    <string name="app_name">Ex_Motricite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_left">Time Left :</string>
    <string name="_10_00">10:00</string>

    <string name="unselect_all">Unselect all</string>
    <string name="export_selection">Export</string>
    <string name="select_all">Select all</string>
    <string name="list_of_test">List of Test:</string>
    <string name="filters">Filters</string>

    <string name="create_patient">Create a new patient</string>
    <string name="create_operator">Create a new operator</string>
    <string name="complete_fields">Complete all fields</string>

    <string name="set_name">Name : </string>
    <string name="set_first_name">First name : </string>
    <string name="set_birth_date">Birth date : </string>
    <string name="set_birthday">Birthday : </string>
    <string name="set_remarks">Remarks : </string>
    <string name="set_observation">Observation : </string>

    <string name="button_edit">Edit</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_delete">Delete</string>

    <string name="edit_operator">Edit operator</string>
    <string name="edit_patient">Edit patient</string>
    <string name="check_tests">Check tests</string>

    <string name="hint_first_name">Write a first name</string>
    <string name="hint_name">Write a name</string>
    <string name="hint_birth_date">Birthday DD/MM/YYYY</string>
    <string name="hint_remarks">Remarks</string>

    <string name="graphic_for_x_and_y_over_time">Graphic for X and Y over time</string>
    <string name="graphic_for_x_over_time">graphic_for_x_over_time</string>
    <string name="graphic_for_y_over_time">graphic_for_y_over_time</string>

    <string name="set_your_text_here">Set your text here</string>
    <string name="distance_between_points_cm">Distance between points (cm)</string>
    <string name="exercise_duration_seconds">Exercise duration (seconds)</string>
    <string name="beeps_interval_seconds">Beeps interval (seconds)</string>
    <string name="start">Start</string>
    <string name="recover_previous_test_s_settings">Recover previous test\'s settings</string>
    <string name="test_successful">Test Successful</string>
    <string name="go_back_home">Go Back Home</string>
    <string name="test_of">Test of :</string>
    <string name="test_type">Test type :</string>
    <string name="test_durations">Test durations :</string>
    <string name="view_graphics">View Graphics</string>

    <string name="operator">Operator</string>
    <string name="patient">Patient</string>

    <string name="add_a_patient">Add a patient</string>
    <string name="add_a_operator">Add a operator</string>
    <string name="name_format">Name : %s</string>
    <string name="first_name_format">First name : %s</string>
    <string name="birthdate_format">Birthdate: %s</string>
    <string name="development_motricity">DEVELOPMENT MOTRICITY</string>
    <string name="button_to_go_back">button to go back</string>
    <string name="static_exercice">Static Exercice</string>
    <string name="consult_profiles">Consult Profiles</string>
    <string name="rhythm_exercice">Rhythm Exercice</string>
    <string name="settings">Settings</string>
    <string name="cross_to_leave_the_filter_page">Cross to leave the filter page</string>
    <string name="filters_text_title">Filters</string>
    <string name="date">Date :</string>
    <string name="date_min">Date min :</string>
    <string name="date_max">Date max :</string>
    <string name="test_type_filters">Test type :</string>
    <string name="operator_filters">Operator :</string>
    <string name="patient_filters">Patient :</string>
    <string name="dynamic">Dynamic</string>
    <string name="Static">Static</string>
    <string name="confirm">Confirm</string>
    <string name="xx_xx_xxxx">xx/xx/xxxx</string>
    <string name="research">Research</string>

    <string name="email_underline"><u>Email</u></string>
    <string name="server_underline"><u>Server</u></string>


</resources>