<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrudUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/header_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"/>

        <LinearLayout
            android:id="@+id/ll_crud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#282424"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_newuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/create_patient"
                android:textColor="#ffffff"
                android:textSize="45sp"
                tools:ignore="NestedWeights" />


            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded"
                android:padding="10dp"
                android:textColor="@color/black"
                android:hint="@string/hint_name"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:autofillHints="name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded"
                android:padding="10dp"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/black"

                android:textColor="@color/black"
                android:inputType="text"
                android:autofillHints="name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/et_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:background="@drawable/edit_text_rounded"
                android:padding="10dp"
                android:textColor="@color/black"
                android:hint="@string/hint_birth_date"
                android:inputType="date"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/et_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded"
                android:hint="@string/hint_remarks"
                android:inputType="textMultiLine"
                android:maxHeight="150dp"
                android:autofillHints="" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/b_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FAD552"
                android:text="@string/button_confirm"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/b_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FAD552"
                android:text="@string/button_delete"
                android:textColor="@color/black"
                android:visibility="gone"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>